name:                  ambiata-x-aeson
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              x-aeson
category:              x-aeson
cabal-version:         >= 1.8
build-type:            Simple
description:           x-aeson.

tested-with:
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.5,
  GHC==8.8.1

library
  build-depends:
                       ambiata-p
                     , aeson                           >= 0.8        && < 2.0
                     , base                            >= 3          && < 6
                     , bytestring                      >= 0.10
                     , containers                      >= 0.5        && < 0.7
                     , text                            >= 1.1        && < 1.3
                     , unordered-containers            == 0.2.*
                     , vector                          >= 0.10       && < 0.14
                     , template-haskell


  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       X.Data.Aeson
                       X.Data.Aeson.TH

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       aeson
                     , base
                     , ambiata-disorder-aeson
                     , ambiata-disorder-core
                     , QuickCheck
                     , quickcheck-instances
                     , text
                     , ambiata-x-aeson

  other-modules:
                       Test.X.Data.Aeson
