name:                  ambiata-x-attoparsec
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              x-attoparsec
category:              x-attoparsec
cabal-version:         >= 1.8
build-type:            Simple
description:           x-attoparsec.

tested-with:
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.5,
  GHC==8.8.1

library
  build-depends:
                       attoparsec                      >= 0.12       && < 0.15
                     , base                            >= 3          && < 5
                     , bytestring                      == 0.12.*
                     , ambiata-p
                     , text                            >= 2.0        && < 2.2

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       X.Data.Attoparsec.ByteString
                       X.Data.Attoparsec.ByteString.Ascii
                       X.Data.Attoparsec.Text

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base
                     , ambiata-disorder-core
                     , ambiata-p
                     , bytestring
                     , QuickCheck
                     , quickcheck-instances
                     , text
                     , ambiata-x-attoparsec

  other-modules:
                       Test.X.Data.Attoparsec.ByteString
                       Test.X.Data.Attoparsec.Gen
                       Test.X.Data.Attoparsec.Text
