name:                  ambiata-x-bytestring
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-x-bytestring.
category:              Prelude
cabal-version:         >= 1.8
build-type:            Simple
description:           ambiata-x-bytestring.

tested-with:
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.5,
  GHC==8.8.1

library
  build-depends:
                       base                            >= 4.6        && < 5
                     , ambiata-p
                     , bytestring                      == 0.12.*
                     , vector                          >= 0.10       && < 0.14

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       X.Data.ByteString.Char8
                       X.Data.ByteString.Unsafe

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:       base
                     , QuickCheck
                     , ambiata-disorder-core
                     , ambiata-disorder-jack
                     , ambiata-p
                     , ambiata-x-bytestring
                     , bytestring
                     , quickcheck-instances
                     , text
                     , vector

  other-modules:
                       Test.X.Data.ByteString.Char8
                       Test.X.Data.ByteString.Unsafe
