name:                  ambiata-x-optparse
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              x-optparse
category:              x-optparse
cabal-version:         >= 1.8
build-type:            Simple
description:           x-optparse.

tested-with:
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.5,
  GHC==8.8.1

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , attoparsec                      >= 0.12       && < 0.14
                     , optparse-applicative            >= 0.11       && < 0.17
                     , text                            == 1.2.*
                     , transformers                    >= 0.4        && < 0.6

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       X.Options.Applicative

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base
                     , ambiata-disorder-core
                     , ambiata-x-optparse
                     , attoparsec
                     , optparse-applicative
                     , text
                     , transformers
                     , transformers-compat
                     , QuickCheck
                     , quickcheck-instances

  other-modules:
                       Test.X.Options.Applicative
