name:                  ambiata-x-show
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-x-show.
category:              Prelude
cabal-version:         >= 1.8
build-type:            Simple
description:           ambiata-x-show.

tested-with:
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.5,
  GHC==8.8.1

library
  build-depends:
                       base                            >= 4.6        && < 5
                     , ambiata-p

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       X.Text.Show

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:       base
                     , ambiata-disorder-core
                     , ambiata-p
                     , ambiata-x-show
                     , QuickCheck
                     , quickcheck-instances

  other-modules:
                       Test.X.Text.Show
