name:                  ambiata-x-templatehaskell
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              x-templatehaskell
category:              x-templatehaskell
cabal-version:         >= 1.8
build-type:            Simple
description:           x-templatehaskell.

tested-with:
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.5,
  GHC==8.8.1

library
  build-depends:
                       base                            >= 3          && < 5
                     , text                            >= 2.0        && < 2.2
                     , template-haskell                >= 2.8
                     , syb                             >= 0.4        && < 0.8

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       X.Language.Haskell.TH
                       X.Language.Haskell.TH.Syntax

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base
                     , ambiata-x-templatehaskell
                     , ambiata-disorder-core
                     , text
                     , QuickCheck
                     , quickcheck-instances
                     , template-haskell

  other-modules:       Test.X.Framework.Language.Haskell.TH
                       Test.X.Language.Haskell.TH
