name:                  ambiata-x-vector
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-x-vector.
category:              Prelude
cabal-version:         >= 1.8
build-type:            Simple
description:           ambiata-x-vector.

tested-with:
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.5,
  GHC==8.8.1

library
  build-depends:
                       base                            >= 4.6        && < 5
                     , ambiata-p
                     , primitive                       >= 0.6        && < 0.8
                     , transformers-base               == 0.4.*
                     , vector                          >= 0.11       && < 0.13

  if impl(ghc < 8.0)
    build-depends:
                       semigroups                      >= 0.16       && < 0.19

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       X.Data.Vector
                       X.Data.Vector.Cons
                       X.Data.Vector.Generic
                       X.Data.Vector.Grow
                       X.Data.Vector.Primitive
                       X.Data.Vector.Ref
                       X.Data.Vector.Storable
                       X.Data.Vector.Unboxed

                       X.Data.Vector.Stream
                       X.Data.Vector.Stream.Conversion
                       X.Data.Vector.Stream.Enum
                       X.Data.Vector.Stream.Group
                       X.Data.Vector.Stream.Map
                       X.Data.Vector.Stream.Merge

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:       base
                     , ambiata-p
                     , ambiata-disorder-core
                     , ambiata-x-vector
                     , QuickCheck
                     , quickcheck-instances
                     , transformers

  other-modules:
                       Test.X.Data.Vector.Generic
                       Test.X.Data.Vector.Stream.Conversion
                       Test.X.Data.Vector.Stream.Enum
                       Test.X.Data.Vector.Stream.Map
                       Test.X.Data.Vector.Stream.Merge

benchmark bench
  type:                exitcode-stdio-1.0

  main-is:             bench.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       bench

  build-depends:       base
                     , ambiata-p
                     , ambiata-x-vector
                     , containers                      == 0.5.*
                     , criterion                       >= 1.1        && < 1.6
                     , deepseq                         >= 1.3        && < 1.5
                     , transformers                    >= 0.4        && < 0.6

  other-modules:
                       Bench.MapMaybe
                       Bench.Merge
